<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Auto Logs</string>
    <string name="x_miles">%d miles</string>
    <string name="last_updated">Last updated: %s</string>
    <string name="no_cars">You don\'t have any cars added.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="miles">Miles</string>
    <string name="cost">Cost</string>
    <string name="notes">Notes</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="my_cars">My Cars</string>

    <string name="error_field_required">Required field</string>
    <string name="error_invalid_length">Invalid length</string>
    <string name="add_car">Add a Car</string>
    <string name="total_spent">Total spent</string>
    <string name="total_cost_placeholder">Total cost: %s</string>
    <string name="average_monthly_cost_placeholder">Average monthly cost: %s</string>

    <string name="details">Details</string>
    <string name="maintenance">Maintenance</string>
    <string name="no_upcoming_maintenance">No upcoming maintenance</string>
    <string name="upcoming_maintenance">Upcoming maintenance</string>
    <string name="modification">Modification</string>
    <string name="modifications" tools:ignore="ExtraTranslation">Modifications</string>
    <string name="service">Service</string>
    <string name="other">Other</string>
    <string name="zero_dollars">$0</string>

    <string name="no_car_work">You don\'t have any service recorded.</string>
    <string name="date">Date</string>
    <string name="odometer_reading">Odometer reading</string>
    <string name="add_placeholder">Add %s</string>
    <string name="aftermarket_modifications">Aftermarket/modification?</string>

    <!-- Errors -->
    <string name="error_occurred">An error has occurred. Try again later.</string>
    <string name="error.starting_camera">There was a problem with starting the camera</string>
    <string name="error.selecting_photo">There was a problem with selecting your photo</string>
    <string name="error.select_photo_from_device">Select a photo on the device (not backed up on the cloud)</string>
    <string name="error.taking_photo">There was a problem with taking a photo</string>
    <string name="error.photo_permissions">This app requires all requested permissions for taking a photo</string>
    <string name="edit">Edit</string>
    <string name="preferences">Preferences</string>
    <string name="delete">Delete</string>
    <string name="delete_reminder">Delete reminder</string>
    <string name="delete_work">Delete work</string>
    <string name="confirm_delete_car">Are you sure you want to delete this car and all of its data?</string>
    <string name="confirm_delete_reminder">Are you sure you want to delete this reminder?</string>
    <string name="confirm_delete_car_work">Are you sure you want to delete this work?</string>
    <string name="oil">Oil</string>
    <string name="months">Months</string>
    <string name="air_filter">Air Filter</string>

    <!-- Maintenance Categories  -->
    <string name="maintenance_category.brakes_and_wheel">Brakes and Wheel</string>
    <string name="maintenance_category.cooling">Cooling</string>
    <string name="maintenance_category.drivetrain">Drivetrain</string>
    <string name="maintenance_category.engine">Engine</string>
    <string name="maintenance_category.fuel_and_air">Fuel and Air</string>
    <string name="maintenance_category.ignition">Ignition</string>
    <string name="maintenance_category.suspension_and_steering">Suspension and Steering</string>
    <string name="maintenance_category.transmission">Transmission</string>
    <string name="add_reminder">Add reminder?</string>
    <string name="preference_name">Preference name:</string>
    <string name="remind_me_next_week">Remind me next week</string>
    <string name="copy_notes">Copy notes from previous</string>
    <string name="no_notes_found">No previous notes found</string>
    <string name="done_this">I\'ve done this</string>
    <string name="due_by">Due by</string>
    <string name="change_date">Change date</string>
    <string name="merchant">Merchant</string>
    <string name="set_photo">Set photo</string>
    <string name="take_photo">Take photo</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="delete_photo">Delete photo</string>

</resources>
