<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/set_photo"
        app:showAsAction="never"
        android:iconTint="@color/colorPrimary">

        <menu>
            <item
                android:id="@+id/menu_select_photo"
                android:title="@string/select_from_gallery"
                android:icon="@drawable/ic_add_photo_black_24"
                app:showAsAction="withText"
                android:iconTint="@color/colorPrimary"/>
            <item
                android:id="@+id/menu_take_photo"
                android:title="@string/take_photo"
                android:icon="@drawable/ic_add_photo_camera_black_24"
                app:showAsAction="withText"
                android:iconTint="@color/colorPrimary"/>
        </menu>
    </item>
</menu>