<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/padding_medium"
    android:paddingHorizontal="@dimen/padding_uber_large">

    <TextView
        android:id="@+id/reminder_name"
        style="@style/TextBody_Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="Reminder name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/due_on_label"
        style="@style/TextBody_Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_extra_small"
        android:text="@string/due_by"
        app:layout_constraintTop_toBottomOf="@id/reminder_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/miles"
        style="@style/TextBody_Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_extra_small"
        tools:text="@string/miles"
        app:layout_constraintTop_toBottomOf="@id/due_on_label"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_layout"
        style="@style/TextBody_Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/date"
        android:focusable="false"
        android:clickable="false"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/miles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_input"
            style="@style/TextBody_Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/change_date"
        style="@style/TextBody_Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_extra_small"
        android:text="@string/change_date"
        android:textColor="@drawable/link_text_selector"
        app:layout_constraintTop_toBottomOf="@id/date_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:drawableStart="@drawable/ic_delete_white"
        android:text="@string/delete"
        app:layout_constraintTop_toBottomOf="@id/change_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.duskencodings.autologs.views.custom.LoadingView
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>